Recently upgraded fix for home screen, added debug version propagator, fixed movies with only tv release flags, removed compact view on mobile, adjust metadata battery functions, fixed scrape time calculation issue, fixed task timings page on mobile, fixed upgrading queue, added retain blacklist checkbox for debug function

--- a/static/css/debug_functions.css
+++ b/static/css/debug_functions.css
@@ -41,6 +41,17 @@ form {
     margin-bottom: 20px;
 }
 
+.form-group label {
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+    color: #ddd;
+}
+
+.form-group input[type="checkbox"] {
+    margin-right: 8px;
+}
+
 label {
     color: #f4f4f4;
     margin-bottom: 8px;
@@ -54,7 +65,10 @@ select#wanted_source,
 select#queue_select,
 select#action_select,
 select#target_queue, .debug-container a,
-select#task_select {
+select#task_select,
+select#original_version,
+select#propagated_version {
+    width: 100%;
     padding: 10px;
     background-color: #3a3a3a;
     border: 1px solid #555;
